--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,13 @@
 title: KrowZ's Blog
 email: zworkrowz@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  AlphaRed is bad
-baseurl: "/" # the subpath of your site, e.g. /blog
+  Blog informatique et infosec
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ZworKrowZ
 github_username:  Kr0wZ
+
+about_page: about.html
 
 # Build settings
 theme: jekyll-theme-cayman
