--- a/_config.yml
+++ b/_config.yml
@@ -22,12 +22,12 @@ title: KrowZ's Blog
 email: zworkrowz@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Blog informatique et infosec
-baseurl: "/fr" # the subpath of your site, e.g. /blog
-url: "https://kr0wz.github.io/fr/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/fr/" # the subpath of your site, e.g. /blog
+url: "https://kr0wz.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ZworKrowZ
 github_username:  Kr0wZ
 
-about_page: "https://kr0wz.github.io/fr/about.html"
+about_page: "about.html"
 
 # Build settings
 theme: jekyll-theme-cayman
