--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: KrowZ's Blog
+title: KrowZ - Tac Au T'Hack
 email: zworkrowz@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Blog informatique et infosec
